--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Komoot feedback</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/main.css?v=1.0">
 
     <!--[if lt IE 9]>
